--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "electron-store": "^5.1.0",
-    "mqtt": "^3.0.0"
+    "mqtt": "^3.0.0",
+    "node-fetch": "^2.6.0"
   },
   "devDependencies": {
     "electron": "^7.1.2"
