--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "Pushy <support@pushy.me>",
   "license": "Apache-2.0",
   "main": "lib/Pushy.js",
+  "typings": "lib/Pushy.d.ts",
   "//": "Also update version in config.js",
   "version": "1.0.6",
   "scripts": {
