--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "electron-store": "^5.1.0",
     "mqtt": "^4.3.7",
-    "node-fetch": "^2.6.7"
+    "node-fetch": "^2.6.7",
+    "packpath": "^0.1.0"
   },
   "devDependencies": {
     "electron": "^15.5.5"
